--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,16 +1,17 @@
 apply plugin: 'com.android.application'
-apply plugin: 'com.google.protobuf'
 
 android {
-    compileSdkVersion buildVersions.compileSdkVersion
-    buildToolsVersion buildVersions.buildToolsVersion
+    compileSdkVersion rootProject.ext.buildVersions.compileSdkVersion
+    buildToolsVersion rootProject.ext.buildVersions.buildToolsVersion
     defaultConfig {
-        minSdkVersion buildVersions.minSdkVersion
-        targetSdkVersion buildVersions.targetSdkVersion
-        versionCode buildVersions.versionCode
-        versionName buildVersions.versionName
-        flavorDimensions buildVersions.flavorDimensions
+        minSdkVersion rootProject.ext.buildVersions.minSdkVersion
+        targetSdkVersion rootProject.ext.buildVersions.targetSdkVersion
+        versionCode rootProject.ext.buildVersions.versionCode
+        versionName rootProject.ext.buildVersions.versionName
+        flavorDimensions rootProject.ext.buildVersions.flavorDimensions
+
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+
         ndk {
             abiFilters 'x86', 'armeabi-v8a'
         }
@@ -78,34 +79,6 @@ android {
 
 }
 
-protobuf {
-    protoc {
-        artifact = 'com.google.protobuf:protoc:3.11.1'
-    }
-    plugins {
-        javalite {
-            artifact = 'com.google.protobuf:protoc-gen-javalite:3.0.0'
-        }
-        grpc {
-            artifact = "io.grpc:protoc-gen-grpc-java:$depVersions.grpc"
-        }
-    }
-
-    generateProtoTasks {
-        all().each { task ->
-            task.builtins {
-
-            }
-            task.plugins {
-                javalite {}
-                grpc {
-                    option 'lite'
-                }
-            }
-        }
-    }
-}
-
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
 
@@ -116,9 +89,6 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.1.0'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
 
-    implementation "io.grpc:grpc-android:$depVersions.grpc"
-    implementation "io.grpc:grpc-okhttp:$depVersions.grpc"
-    implementation "io.grpc:grpc-protobuf-lite:$depVersions.grpc"
-    implementation "io.grpc:grpc-stub:$depVersions.grpc"
-    implementation 'javax.annotation:javax.annotation-api:1.3.2'
+
+    implementation project(path: ':lib_im')
 }
