--- a/im/im_core/build.gradle
+++ b/im/im_core/build.gradle
@@ -25,17 +25,28 @@ android {
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
 
-    implementation 'androidx.appcompat:appcompat:1.1.0'
-
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
+
+    implementation 'androidx.appcompat:appcompat:1.1.0'
 
     implementation "io.grpc:grpc-android:$depVersions.grpc"
     implementation "io.grpc:grpc-okhttp:$depVersions.grpc"
     implementation "io.grpc:grpc-protobuf-lite:$depVersions.grpc"
     implementation "io.grpc:grpc-stub:$depVersions.grpc"
     implementation 'javax.annotation:javax.annotation-api:1.3.2'
+}
+
+buildscript {
+    repositories {
+        google()
+        jcenter()
+
+    }
+    dependencies {
+        classpath 'com.google.protobuf:protobuf-gradle-plugin:0.8.10'
+    }
 }
 
 
