--- a/settings.gradle
+++ b/settings.gradle
@@ -1,2 +1,6 @@
-include ':app', ':lib_im'
 rootProject.name='Salty'
+
+include ':app', ':im_core'
+
+include ':im_core'
+project(':im_core').projectDir = file('im/im_core')
