--- a/config.gradle
+++ b/config.gradle
@@ -10,6 +10,7 @@ ext {
     ]
 
     depVersions = [
+            protobuf       : "3.11.1",
             grpc       : "1.25.0",
             leakcanaryVersion: "1.6.3",
             glideVersion     : "4.9.0"
