--- a/im/im_core/build.gradle
+++ b/im/im_core/build.gradle
@@ -22,22 +22,6 @@ android {
 
 }
 
-dependencies {
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
-
-    testImplementation 'junit:junit:4.12'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.1'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
-
-    implementation 'androidx.appcompat:appcompat:1.1.0'
-
-    implementation "io.grpc:grpc-android:$depVersions.grpc"
-    implementation "io.grpc:grpc-okhttp:$depVersions.grpc"
-    implementation "io.grpc:grpc-protobuf-lite:$depVersions.grpc"
-    implementation "io.grpc:grpc-stub:$depVersions.grpc"
-    implementation 'javax.annotation:javax.annotation-api:1.3.2'
-}
-
 buildscript {
     repositories {
         google()
@@ -53,7 +37,7 @@ buildscript {
 apply plugin: 'com.google.protobuf'
 protobuf {
     protoc {
-        artifact = 'com.google.protobuf:protoc:3.11.1'
+        artifact = "com.google.protobuf:protoc:$depVersions.protobuf"
     }
     plugins {
         javalite {
@@ -77,4 +61,23 @@ protobuf {
             }
         }
     }
+}
+
+dependencies {
+    implementation fileTree(dir: 'libs', include: ['*.jar'])
+
+    testImplementation 'junit:junit:4.12'
+    androidTestImplementation 'androidx.test.ext:junit:1.1.1'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
+
+    implementation 'androidx.appcompat:appcompat:1.1.0'
+
+    implementation "com.google.protobuf:protobuf-javalite:$depVersions.protobuf"
+
+    implementation "io.grpc:grpc-android:$depVersions.grpc"
+    implementation "io.grpc:grpc-okhttp:$depVersions.grpc"
+    implementation "io.grpc:grpc-protobuf-lite:$depVersions.grpc"
+    implementation "io.grpc:grpc-stub:$depVersions.grpc"
+    implementation 'javax.annotation:javax.annotation-api:1.3.2'
+
 }
