--- a/im/im_core/build.gradle
+++ b/im/im_core/build.gradle
@@ -26,10 +26,9 @@ buildscript {
     repositories {
         google()
         jcenter()
-
     }
     dependencies {
-        classpath 'com.google.protobuf:protobuf-gradle-plugin:0.8.10'
+        classpath 'com.google.protobuf:protobuf-gradle-plugin:0.8.11'
     }
 }
 
@@ -51,10 +50,11 @@ protobuf {
     generateProtoTasks {
         all().each { task ->
             task.builtins {
-
+                java {
+                    option 'lite'
+                }
             }
             task.plugins {
-                javalite {}
                 grpc {
                     option 'lite'
                 }
@@ -72,12 +72,11 @@ dependencies {
 
     implementation 'androidx.appcompat:appcompat:1.1.0'
 
-    implementation "com.google.protobuf:protobuf-javalite:$depVersions.protobuf"
-
     implementation "io.grpc:grpc-android:$depVersions.grpc"
     implementation "io.grpc:grpc-okhttp:$depVersions.grpc"
-    implementation "io.grpc:grpc-protobuf-lite:$depVersions.grpc"
     implementation "io.grpc:grpc-stub:$depVersions.grpc"
+    implementation "io.grpc:grpc-protobuf:$depVersions.grpc"
+
     implementation 'javax.annotation:javax.annotation-api:1.3.2'
 
 }
