--- a/im/im_core/build.gradle
+++ b/im/im_core/build.gradle
@@ -72,10 +72,10 @@ dependencies {
 
     implementation 'androidx.appcompat:appcompat:1.1.0'
 
-    implementation "io.grpc:grpc-android:$depVersions.grpc"
-    implementation "io.grpc:grpc-okhttp:$depVersions.grpc"
-    implementation "io.grpc:grpc-stub:$depVersions.grpc"
-    implementation "io.grpc:grpc-protobuf-lite:$depVersions.grpc"
+    api "io.grpc:grpc-android:$depVersions.grpc"
+    api "io.grpc:grpc-okhttp:$depVersions.grpc"
+    api "io.grpc:grpc-stub:$depVersions.grpc"
+    api "io.grpc:grpc-protobuf-lite:$depVersions.grpc"
 
     implementation 'javax.annotation:javax.annotation-api:1.3.2'
 
