--- a/im/im_core/src/main/AndroidManifest.xml
+++ b/im/im_core/src/main/AndroidManifest.xml
@@ -2,5 +2,6 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="me.zhixingye.im">
 
+    <uses-permission android:name="android.permission.INTERNET" /> <!-- 允许程序获取网络信息状态，如当前的网络连接是否有效 -->
 
 </manifest>
