--- a/app/build.gradle
+++ b/app/build.gradle
@@ -82,7 +82,7 @@ android {
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation project(path: ':im_core')
+    implementation project(path: ':im_sdk')
 
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
