--- a/im_sdk/src/main/AndroidManifest.xml
+++ b/im_sdk/src/main/AndroidManifest.xml
@@ -4,7 +4,7 @@
 
     <application>
         <service
-            android:name=".IMService"
+            android:name=".IMRemoteService"
             android:enabled="true"
             android:exported="false"
             android:process=":im" />
