--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,8 +19,10 @@
     <uses-permission android:name="android.permission.CAMERA" /> <!-- 显示系统窗口权限 -->
     <uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW" /> <!-- 显示系统窗口权限 -->
     <uses-permission android:name="android.permission.SYSTEM_OVERLAY_WINDOW" />
+
     <application
-        android:allowBackup="true"
+        android:name=".SaltyApp"
+        android:allowBackup="false"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
