--- a/app/build.gradle
+++ b/app/build.gradle
@@ -84,12 +84,18 @@ dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation project(path: ':im_sdk')
 
-    testImplementation 'junit:junit:4.12'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.1'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
+    implementation "androidx.appcompat:appcompat:${depVersions.appcompat}"
+    implementation "androidx.constraintlayout:constraintlayout:${depVersions.constraintlayout}"
+    implementation "androidx.emoji:emoji:${depVersions.emoji}"
+    implementation "androidx.emoji:emoji-bundled:${depVersions.emoji}"
 
-    implementation 'androidx.appcompat:appcompat:1.1.0'
-    implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
+    implementation "com.google.android.material:material:${depVersions.material}"
+    implementation "com.google.zxing:core:${depVersions.zxing}"
+    implementation "me.jessyan:autosize:${depVersions.autosize}"
+    implementation "com.amap.api:3dmap:${depVersions.map}"
+    implementation "com.amap.api:search:${depVersions.map}"
+    implementation "com.github.bumptech.glide:glide:${depVersions.glide}"
+    debugImplementation "com.squareup.leakcanary:leakcanary-android:${depVersions.leakcanary}"
 
-
+    annotationProcessor "com.github.bumptech.glide:compiler:${depVersions.glide}"
 }
