--- a/config.gradle
+++ b/config.gradle
@@ -1,45 +1,36 @@
 ext {
     buildVersions = [
             compileSdkVersion: 29,
-            buildToolsVersion: "29.0.2",
+            buildToolsVersion: "29.0.3",
             minSdkVersion    : 24,
             targetSdkVersion : 29,
-            versionCode      : 20191212,
+            versionCode      : 20200202,
             versionName      : "1.0",
             flavorDimensions : "1.0"
     ]
 
     depVersions = [
-            protobuf       : "3.11.1",
-            grpc       : "1.26.0",
-            leakcanaryVersion: "1.6.3",
-            glideVersion     : "4.9.0"
-    ]
+            constraintlayout      : "1.1.3",
+            appcompat             : "1.1.0",
+            emoji                 : "1.0.0",
 
-    deps = [
-            androidx  : [
-                    constraintLayout: "androidx.constraintlayout:constraintlayout:1.1.3",
-                    appcompat       : "androidx.appcompat:appcompat:1.0.2",
-                    emoji           : "androidx.emoji:emoji:1.0.0",
-                    emojibBundled   : "androidx.emoji:emoji-bundled:1.0.0",
-                    design          : "com.google.android.material:material:1.0.0"
-            ],
+            junit                 : "4.13",
+            android_junit         : "1.1.1",
+            android_junit_espresso: "3.2.0",
 
-            ext       : [
-                    gson              : "com.google.code.gson:gson:2.8.5",
-                    materialDialogs   : "com.afollestad.material-dialogs:core:0.9.6.0",
-                    zxing             : "com.google.zxing:core:3.3.3",
-                    autosize          : "me.jessyan:autosize:1.1.2",
-                    map3D             : "com.amap.api:3dmap:${depVersions.mapVersion}",
-                    mapSearch         : "com.amap.api:search:${depVersions.mapVersion}",
-                    glide             : "com.github.bumptech.glide:glide:${depVersions.glideVersion}",
-                    leakcanaryAndroid : "com.squareup.leakcanary:leakcanary-android:${depVersions.leakcanaryVersion}",
-                    leakcanaryFragment: "com.squareup.leakcanary:leakcanary-support-fragment:${depVersions.leakcanaryVersion}"
-            ],
+            material              : "1.1.0",
+            javax_annotation      : "1.3.2",
 
-            annotation: [
-                    glide: "com.github.bumptech.glide:compiler:${depVersions.glideVersion}",
-            ]
+            zxing                 : "3.4.0",
+            autosize              : "1.1.2",
+            leakcanary            : "2.1",
+            glide                 : "4.11.0",
+            map                   : "latest.integration",
+
+            protobuf_gradle_plugin: "0.8.11",
+            protoc_gen_javalite   : "3.0.0",
+            protobuf              : "3.11.1",
+            grpc                  : "1.26.0"
     ]
 
 }
