--- a/im_sdk/build.gradle
+++ b/im_sdk/build.gradle
@@ -1,13 +1,11 @@
 apply plugin: 'com.android.library'
 
 android {
-    compileSdkVersion 29
-    buildToolsVersion "29.0.2"
-
-
+    compileSdkVersion rootProject.ext.buildVersions.compileSdkVersion
+    buildToolsVersion rootProject.ext.buildVersions.buildToolsVersion
     defaultConfig {
-        minSdkVersion 24
-        targetSdkVersion 29
+        minSdkVersion rootProject.ext.buildVersions.minSdkVersion
+        targetSdkVersion rootProject.ext.buildVersions.targetSdkVersion
         versionCode 1
         versionName "1.0"
 
@@ -22,15 +20,18 @@ android {
         }
     }
 
+    compileOptions {
+        sourceCompatibility = 1.8
+        targetCompatibility = 1.8
+    }
 }
 
 dependencies {
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
+    testImplementation "junit:junit:${depVersions.junit}"
+    androidTestImplementation "androidx.test.ext:junit:${depVersions.android_junit}"
+    androidTestImplementation "androidx.test.espresso:espresso-core:${depVersions.android_junit_espresso}"
 
-    implementation 'androidx.appcompat:appcompat:1.1.0'
-    testImplementation 'junit:junit:4.12'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.1'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
+    implementation "androidx.appcompat:appcompat:${depVersions.appcompat}"
 
-    implementation project(path: ':im_core')
+    api project(path: ':im_core')
 }
