--- a/app/build.gradle
+++ b/app/build.gradle
@@ -95,6 +95,9 @@ dependencies {
     implementation "com.amap.api:3dmap:${depVersions.map}"
     implementation "com.amap.api:search:${depVersions.map}"
     implementation "com.github.bumptech.glide:glide:${depVersions.glide}"
+    implementation "com.github.bumptech.glide:okhttp3-integration:${depVersions.glide}"
+    implementation 'androidx.appcompat:appcompat:1.1.0'
+    implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     debugImplementation "com.squareup.leakcanary:leakcanary-android:${depVersions.leakcanary}"
 
     annotationProcessor "com.github.bumptech.glide:compiler:${depVersions.glide}"
