更新目录结构

--- a/settings.gradle
+++ b/settings.gradle
@@ -1,6 +1,8 @@
 rootProject.name='Salty'
 
-include ':app', ':im_core', ':im_sdk'
+include ':app'
 
 include ':im_core'
 project(':im_core').projectDir = file('im/im_core')
+include ':im_sdk'
+project(':im_sdk').projectDir = file('im/im_sdk')
