--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,14 +26,21 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity
-            android:name=".module.splash.view.SplashActivity"
-            android:theme="@style/SplashTheme">
+        <activity android:name=".TestActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        <activity
+            android:name=".module.splash.view.SplashActivity"
+            android:theme="@style/SplashTheme">
+<!--            <intent-filter>-->
+<!--                <action android:name="android.intent.action.MAIN" />-->
+
+<!--                <category android:name="android.intent.category.LAUNCHER" />-->
+<!--            </intent-filter>-->
         </activity>
 
         <provider
@@ -49,7 +56,6 @@
         <activity android:name=".module.main.view.MainActivity" />
         <activity android:name=".module.login.view.LoginActivity" />
         <activity android:name=".module.splash.view.GuideActivity" />
-
     </application>
 
 </manifest>
