--- a/gradle.properties
+++ b/gradle.properties
@@ -12,5 +12,10 @@
 # org.gradle.parallel=true
 #Sat Feb 29 19:37:45 CST 2020
 android.enableJetifier=true
-org.gradle.jvmargs=-Xmx2048M -Dkotlin.daemon.jvm.options\="-Xmx2048M"
+org.gradle.jvmargs=-Xmx5120M -Dkotlin.daemon.jvm.options\="-Xmx5120M"
 android.useAndroidX=true
+
+systemProp.http.proxyPort=12639
+systemProp.http.proxyHost=127.0.0.1
+systemProp.https.proxyPort=12639
+systemProp.https.proxyHost=127.0.0.1
