--- a/im/im_core/build.gradle
+++ b/im/im_core/build.gradle
@@ -15,9 +15,15 @@ android {
     }
 
     buildTypes {
+        debug {
+            minifyEnabled false
+            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+            buildConfigField 'String', 'SERVER_ADDRESS', '"www.orline.cn:9090"'
+        }
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+            buildConfigField 'String', 'SERVER_ADDRESS', '"www.orline.cn:9090"'
         }
     }
 
