--- a/config.gradle
+++ b/config.gradle
@@ -18,7 +18,7 @@ ext {
             android_junit         : "1.1.1",
             android_junit_espresso: "3.2.0",
 
-            material              : "1.1.0",
+            material              : "1.2.0-alpha06",
             javax_annotation      : "1.3.2",
 
             zxing                 : "3.4.0",
@@ -27,10 +27,10 @@ ext {
             glide                 : "4.11.0",
             map                   : "latest.integration",
 
-            protobuf_gradle_plugin: "0.8.11",
+            protobuf_gradle_plugin: "0.8.12",
             protoc_gen_javalite   : "3.0.0",
-            protobuf              : "3.11.1",
-            grpc                  : "1.27.1"
+            protobuf              : "3.11.4",
+            grpc                  : "1.29.0"
     ]
 
 }
