--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,7 +26,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".module.login.view.RecoverPasswordActivity"></activity>
+        <activity android:name=".module.web.WebActivity"></activity>
+        <activity android:name=".module.login.view.RecoverPasswordActivity" />
         <activity android:name=".module.login.view.SuccessfulActivity" />
 
         <provider
