--- a/app/build.gradle
+++ b/app/build.gradle
@@ -51,20 +51,6 @@ android {
         disable 'GoogleAppIndexingWarning'
     }
 
-    productFlavors {
-        produce {
-            applicationId "me.zhixingye.salty"
-            resValue "string", "app_name", "闲聊"
-            buildConfigField 'String', 'ServerUrl', '"https://swallet-equicom-uat.wepayez.com/"'
-        }
-
-        dev {
-            applicationId "me.zhixingye.salty.dev"
-            resValue "string", "app_name", "(DEV)闲聊"
-            buildConfigField 'String', 'ServerUrl', '"http://192.168.1.19:9091/"'
-        }
-    }
-
     android.applicationVariants.all { variant ->
         variant.outputs.all {
             outputFileName = "SaltyIM_${variant.buildType.name}_${variant.versionName}" + ".apk"
@@ -79,18 +65,19 @@ dependencies {
 
     implementation "androidx.appcompat:appcompat:${depVersions.appcompat}"
     implementation "androidx.constraintlayout:constraintlayout:${depVersions.constraintlayout}"
-    implementation "androidx.emoji:emoji:${depVersions.emoji}"
-    implementation "androidx.emoji:emoji-bundled:${depVersions.emoji}"
+//    implementation "androidx.emoji:emoji:${depVersions.emoji}"
+//    implementation "androidx.emoji:emoji-bundled:${depVersions.emoji}"
 
     implementation "com.google.android.material:material:${depVersions.material}"
-    implementation "com.google.zxing:core:${depVersions.zxing}"
+//    implementation "com.google.zxing:core:${depVersions.zxing}"
+//
+//    implementation "com.amap.api:3dmap:${depVersions.map}"
+//    implementation "com.amap.api:search:${depVersions.map}"
     implementation "me.jessyan:autosize:${depVersions.autosize}"
-    implementation "com.amap.api:3dmap:${depVersions.map}"
-    implementation "com.amap.api:search:${depVersions.map}"
     implementation "com.github.bumptech.glide:glide:${depVersions.glide}"
-    implementation 'androidx.appcompat:appcompat:1.1.0'
-    implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     debugImplementation "com.squareup.leakcanary:leakcanary-android:${depVersions.leakcanary}"
+
+    implementation 'com.tencent.bugly:crashreport_upgrade:latest.release'
 
     annotationProcessor "com.github.bumptech.glide:compiler:${depVersions.glide}"
 }
