--- a/config.gradle
+++ b/config.gradle
@@ -4,7 +4,7 @@ ext {
             buildToolsVersion: "29.0.3",
             minSdkVersion    : 24,
             targetSdkVersion : 29,
-            versionCode      : 20200202,
+            versionCode      : 1,
             versionName      : "1.0",
             flavorDimensions : "1.0"
     ]
