--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -43,10 +43,10 @@
 
         <activity android:name=".TestActivity">
 
-<!--             <intent-filter>-->
-<!--             <action android:name="android.intent.action.MAIN" />-->
-<!--             <category android:name="android.intent.category.LAUNCHER" />-->
-<!--             </intent-filter>-->
+<!--            <intent-filter>-->
+<!--                <action android:name="android.intent.action.MAIN" />-->
+<!--                <category android:name="android.intent.category.LAUNCHER" />-->
+<!--            </intent-filter>-->
         </activity>
         <activity
             android:name=".module.splash.view.SplashActivity"
@@ -60,13 +60,8 @@
         <activity android:name=".module.login.view.ResetLoginPasswordActivity" />
         <activity android:name=".module.login.view.TelephoneSMSVerifyActivity" />
         <activity android:name=".module.login.view.RegisterActivity" />
-        <activity android:name=".module.main.view.MainActivity" >
-<!--            <intent-filter>-->
-<!--                <action android:name="android.intent.action.MAIN" />-->
-
-<!--                <category android:name="android.intent.category.LAUNCHER" />-->
-<!--            </intent-filter>-->
-        </activity>
+        <activity android:name=".module.main.view.MainActivity" />
+        <activity android:name=".module.contact.view.PushMessageActivity" />
         <activity
             android:name=".module.login.view.LoginActivity"
             android:launchMode="singleTask" />
