--- a/config.gradle
+++ b/config.gradle
@@ -1,7 +1,7 @@
 ext.Ver = [
         compileSdkVersion: 29,
         buildToolsVersion: "29.0.3",
-        minSdkVersion    : 24,
+        minSdkVersion    : 26,
         targetSdkVersion : 29,
         versionCode      : 1,
         versionName      : "1.0",
@@ -13,24 +13,24 @@ def im_dependencies = [
 ]
 
 def androidx_dependencies = [
-        appcompat         : "androidx.appcompat:appcompat:1.0.2",
+        appcompat         : "androidx.appcompat:appcompat:1.1.0",
         constraintlayout  : "androidx.constraintlayout:constraintlayout:1.1.3",
-        recyclerview      : "androidx.recyclerview:recyclerview:1.2.0-alpha03",
-        swiperefreshlayout: "androidx.swiperefreshlayout:swiperefreshlayout:1.0.0",
-        emoji             : "androidx.emoji:emoji:1.0.0",
-        emojibBundled     : "androidx.emoji:emoji-bundled:1.0.0",
-        material          : "com.google.android.material:material:1.2.0-beta01"
+        recyclerview      : "androidx.recyclerview:recyclerview:1.2.0-alpha05",
+        swiperefreshlayout: "androidx.swiperefreshlayout:swiperefreshlayout:1.1.0",
+        emoji             : "androidx.emoji:emoji:1.1.0",
+        emojibBundled     : "androidx.emoji:emoji-bundled:1.1.0",
+        material          : "com.google.android.material:material:1.2.1"
 ]
 
 def thirdParty_dependencies = [
         gson      : "com.google.code.gson:gson:2.8.6",
         zxing     : "com.google.zxing:core:3.4.0",
-        autosize  : "me.jessyan:autosize:1.1.2",
+        autosize  : "me.jessyan:autosize:1.2.1",
         map3D     : "com.amap.api:3dmap:latest.integration",
         mapSearch : "com.amap.api:search:latest.integration",
         glide     : "com.github.bumptech.glide:glide:4.11.0",
 //        glideAnnotation: "com.github.bumptech.glide:compiler:4.11.0",
-        leakcanary: "com.squareup.leakcanary:leakcanary-android:2.2"
+        leakcanary: "com.squareup.leakcanary:leakcanary-android:2.4"
 ]
 
 def test_dependencies = [
