--- a/config.gradle
+++ b/config.gradle
@@ -1,8 +1,8 @@
 ext.Ver = [
-        compileSdkVersion: 29,
-        buildToolsVersion: "29.0.3",
+        compileSdkVersion: 30,
+        buildToolsVersion: "30.0.3",
         minSdkVersion    : 26,
-        targetSdkVersion : 29,
+        targetSdkVersion : 30,
         versionCode      : 1,
         versionName      : "1.0",
         flavorDimensions : "stage",
@@ -16,28 +16,28 @@ def im_dependencies = [
 def androidx_dependencies = [
         appcompat         : "androidx.appcompat:appcompat:1.2.0",
         constraintlayout  : "androidx.constraintlayout:constraintlayout:2.0.4",
-        recyclerview      : "androidx.recyclerview:recyclerview:1.2.0-alpha05",
+        recyclerview      : "androidx.recyclerview:recyclerview:1.2.0",
         swiperefreshlayout: "androidx.swiperefreshlayout:swiperefreshlayout:1.1.0",
         emoji             : "androidx.emoji:emoji:1.1.0",
         emojibBundled     : "androidx.emoji:emoji-bundled:1.1.0",
-        material          : "com.google.android.material:material:1.2.1"
+        material          : "com.google.android.material:material:1.3.0"
 ]
 
 def thirdParty_dependencies = [
-        gson      : "com.google.code.gson:gson:2.8.6",
+        gson      : "com.google.code.gson:gson:2.8.7",
         zxing     : "com.google.zxing:core:3.4.1",
         autosize  : "me.jessyan:autosize:1.2.1",
         map3D     : "com.amap.api:3dmap:latest.integration",
         mapSearch : "com.amap.api:search:latest.integration",
-        glide     : "com.github.bumptech.glide:glide:4.11.0",
-//        glideAnnotation: "com.github.bumptech.glide:compiler:4.11.0",
-        leakcanary: "com.squareup.leakcanary:leakcanary-android:2.6"
+        glide     : "com.github.bumptech.glide:glide:4.12.0",
+        glideAnnotation: "com.github.bumptech.glide:compiler:4.12.0",
+        leakcanary: "com.squareup.leakcanary:leakcanary-android:2.7"
 ]
 
 def test_dependencies = [
-        junit          : "junit:junit:4.13",
-        androidJunit   : "androidx.test.ext:junit:1.1.1",
-        androidEspresso: "androidx.test.espresso:espresso-core:3.2.0"
+        junit          : "junit:junit:4.13.2",
+        androidJunit   : "androidx.test.ext:junit:1.1.2",
+        androidEspresso: "androidx.test.espresso:espresso-core:3.3.0"
 ]
 
 ext.Deps = [
